// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Tabs Basic Usage 1`] = `
Object {
  "docs": "Display different content based on the Tabs behavior.",
  "html": "<ul class=\\"drac-tabs drac-tabs-white\\">
  <li class=\\"drac-tab drac-tab-active\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
  </li>
  <li class=\\"drac-tab\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
  </li>
  <li class=\\"drac-tab\\">
    <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
  </li>
</ul>
",
  "react": "<Tabs>
  <li className=\\"drac-tab drac-tab-active\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item One
    </a>
  </li>
  <li className=\\"drac-tab\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item Two
    </a>
  </li>
  <li className=\\"drac-tab\\">
    <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
      Item Three
    </a>
  </li>
</Tabs>;
",
  "title": "Usage",
}
`;

exports[`Site: Tabs Colors 1`] = `
Object {
  "docs": "Tabs can be customized to use any of the Dracula UI theme colors.",
  "html": "<div class=\\"drac-box\\">
  <div class=\\"drac-box\\">
    <ul class=\\"drac-tabs drac-tabs-cyan\\">
      <li class=\\"drac-tab drac-tab-active\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
      </li>
      <li class=\\"drac-tab\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
      </li>
      <li class=\\"drac-tab\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
      </li>
    </ul>
  </div>
  <div class=\\"drac-box\\">
    <ul class=\\"drac-tabs drac-tabs-green\\">
      <li class=\\"drac-tab drac-tab-active\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item One</a>
      </li>
      <li class=\\"drac-tab\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Two</a>
      </li>
      <li class=\\"drac-tab\\">
        <a class=\\"drac-tab-link drac-text\\" href=\\"#\\">Item Three</a>
      </li>
    </ul>
  </div>
</div>
",
  "react": "<Box>
  <Box>
    <Tabs color=\\"cyan\\">
      <li className=\\"drac-tab drac-tab-active\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item One
        </a>
      </li>
      <li className=\\"drac-tab\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item Two
        </a>
      </li>
      <li className=\\"drac-tab\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item Three
        </a>
      </li>
    </Tabs>
  </Box>
  <Box>
    <Tabs color=\\"green\\">
      <li className=\\"drac-tab drac-tab-active\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item One
        </a>
      </li>
      <li className=\\"drac-tab\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item Two
        </a>
      </li>
      <li className=\\"drac-tab\\">
        <a className=\\"drac-tab-link drac-text\\" href=\\"#\\">
          Item Three
        </a>
      </li>
    </Tabs>
  </Box>
</Box>;
",
  "title": "Colors",
}
`;
